# simpleslackdump

./: .gitignore  README.md  graph.html  pyproject.toml
ssd/: api.py  attachments.py  cli.py  config.py  dump.py  graph.py  output.py  parser.py  sync.py  token.py
tests/: conftest.py  test_api.py  test_attachments.py  test_cli.py  test_config.py  test_config_commands.py  test_dump.py  test_graph.py  test_output.py  test_parser.py  test_sync.py  test_token.py
