[project]
name = "ssd"
version = "0.1.0"
description = "simpleslackdump - dump Slack channels to JSON/Markdown"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27",
    "click>=8.1",
    "tomlkit>=0.13",
    "requests>=2.31",
    "cryptography>=42.0",
]

[project.optional-dependencies]
leveldb = ["plyvel>=1.5"]

[project.scripts]
ssd = "ssd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
