[project]
name = "ssd"
version = "0.1.0"
description = "simpleslackdump - dump Slack channels to JSON/Markdown"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27",
    "click>=8.1",
    "tomlkit>=0.13",
    "requests>=2.31",
    "cryptography>=42.0",
]

[project.optional-dependencies]
leveldb = ["plyvel>=1.5"]

[project.scripts]
ssd = "ssd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN204",            # __init__ return type implied None
    "ANN401",            # Dynamically typed expressions (Any)
    "B008",              # Do not perform function calls in default arguments (click uses this)
    "SIM108",            # Ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"ssd/graph.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
